Design Fix. Navigation fixed and added onClick interface.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="guide">Guide</string>
     <string name="might_need_these">Might need these</string>
     <string name="top_pick_articles">Top-pick articles</string>
+    <string name="sell_all"><u>See all</u></string>
 </resources>
